# SpineSkeletonDataConverter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  版本差异记录.md
data/37/alien/export/: alien-ess.skel.json  alien-pro.skel.json
data/37/coin/export/: coin-pro.skel.json
data/37/dragon/export/: dragon-ess.skel.json
data/37/goblins/export/: goblins-ess.skel.json  goblins-pro.skel.json
data/37/hero/export/: hero-ess.skel.json  hero-pro.skel.json
data/37/owl/export/: owl-pro.skel.json
data/37/powerup/export/: powerup-ess.skel.json  powerup-pro.skel.json
data/37/raptor/export/: raptor-pro.skel.json
data/37/speedy/export/: speedy-ess.skel.json
data/37/spineboy/export/: spineboy-ess.skel.json  spineboy-pro.skel.json
data/37/stretchyman/export/: stretchyman-pro.skel.json  stretchyman-stretchy-ik-pro.skel.json
data/37/tank/export/: tank-pro.skel.json
data/37/vine/export/: vine-pro.skel.json
data/37/windmill/export/: windmill-ess.skel.json
data/38/alien/export/: alien-ess.skel.json  alien-pro.skel.json
data/38/coin/export/: coin-pro.skel.json
data/38/dragon/export/: dragon-ess.skel.json
data/38/goblins/export/: goblins-ess.skel.json  goblins-pro.skel.json
data/38/hero/export/: hero-ess.skel.json  hero-pro.skel.json
data/38/mix-and-match/export/: mix-and-match-pro.skel.json
data/38/owl/export/: owl-pro.skel.json
data/38/powerup/export/: powerup-ess.skel.json  powerup-pro.skel.json
data/38/raptor/export/: raptor-pro.skel.json
data/38/speedy/export/: speedy-ess.skel.json
data/38/spineboy/export/: spineboy-ess.skel.json  spineboy-pro.skel.json
data/38/stretchyman/export/: stretchyman-pro.skel.json
data/38/tank/export/: tank-pro.skel.json
data/38/vine/export/: vine-pro.skel.json
data/38/windmill/export/: windmill-ess.skel.json
data/40/alien/export/: alien-ess.json.skel.json  alien-ess.skel.json  alien-pro.json.skel.json  alien-pro.skel.json
data/40/coin/export/: coin-pro.json.json  coin-pro.skel.json
data/40/dragon/export/: dragon-ess.json.json  dragon-ess.skel.json
data/40/goblins/export/: goblins-ess.json.json  goblins-ess.skel.json  goblins-pro.json.json  goblins-pro.skel.json
data/40/hero/export/: hero-ess.json.json  hero-ess.skel.json  hero-pro.json.json  hero-pro.skel.json
data/40/mix-and-match/export/: mix-and-match-pro.json.json  mix-and-match-pro.skel.json
data/40/owl/export/: owl-pro.json.skel.json  owl-pro.skel.json
data/40/powerup/export/: powerup-ess.json.json  powerup-ess.skel.json  powerup-pro.json.skel.json  powerup-pro.skel.json
data/40/raptor/export/: raptor-pro.json.json  raptor-pro.skel.json
data/40/speedy/export/: speedy-ess.json.skel.json  speedy-ess.skel.json
data/40/spineboy/export/: spineboy-ess.json.json  spineboy-ess.skel.json  spineboy-pro.json.json  spineboy-pro.skel.json
data/40/stretchyman/export/: stretchyman-pro.json.skel.json  stretchyman-pro.skel.json
data/41/windmill/: license.txt
data/42/export/: runtimes.sh
data/42/vine/: license.txt
data/test/: tank.json.json  tank.json.skel  tank.skel.skel
include/: AtlasData.h  SkeletonData.h  SkeletonData37.h  SkeletonData38.h  SkeletonData40.h  SkeletonData41.h  SkeletonData42.h  common.h  json.hpp
src/: AtlasDataConverter38.cpp  CurveConverter.cpp  OrderConverter.cpp  RotateTimelineConverter.cpp  SkeletonData35BinaryReader.cpp  SkeletonData35BinaryWriter.cpp  SkeletonData35JsonReader.cpp  SkeletonData35JsonWriter.cpp  SkeletonData36BinaryReader.cpp  SkeletonData36BinaryWriter.cpp  SkeletonData36JsonReader.cpp  SkeletonData36JsonWriter.cpp  SkeletonData37BinaryReader.cpp  SkeletonData37BinaryWriter.cpp  SkeletonData37JsonReader.cpp  SkeletonData37JsonWriter.cpp  SkeletonData38BinaryReader.cpp  SkeletonData38BinaryWriter.cpp  SkeletonData38JsonReader.cpp  SkeletonData38JsonWriter.cpp  SkeletonData40BinaryReader.cpp  SkeletonData40BinaryWriter.cpp  SkeletonData40JsonReader.cpp  SkeletonData40JsonWriter.cpp  SkeletonData41BinaryReader.cpp  SkeletonData41BinaryWriter.cpp  SkeletonData41JsonReader.cpp  SkeletonData41JsonWriter.cpp  SkeletonData42BinaryReader.cpp  SkeletonData42BinaryWriter.cpp  SkeletonData42JsonReader.cpp  SkeletonData42JsonWriter.cpp  SkeletonDataConverter.cpp  SpacingModeConverter.cpp  SpineAtlasDowngrade.cpp  common.cpp  json2json.cpp  jsonformat.hpp  main.cpp  skel2json.cpp  (+5 more)
src/skel2json/: skel2json.cpp  skel2json.h  skel2json37.cpp  skel2json38.cpp  skel2json40.cpp  skel2json41.cpp  skel2json42.cpp
test/: test.cpp  test_skel2json37.cpp  test_skel2json38.cpp  test_skel2json40.cpp  test_skel2json41.cpp  test_skel2json42.cpp
tools/: Spine4xTo38Converter.py  SpineAtlasDowngrade.py  SpineConverter.py  TestSpineSkeletonDataConverter.py  analyze_json_differences.py  convert_skel_to_json.py  json_diff.py  json_diff_all.py  run_pipeline.py  validate_json_files.py
(+123 files in other folders)
